# watchr

./: Cargo.toml  LICENSE  shell.nix
src/: data.rs  error.rs  main.rs  path.rs  util.rs
