[package]
name = "watchr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.97"
awc = "3.5.1"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.26"
once_cell = "1.21.1"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
shellexpand = "3.1.0"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["sync"] }
